// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> props className 1`] = `
<span
  className="ek-text ololo"
/>
`;

exports[`<Text /> props text-tag 1`] = `
<div
  className="ek-text"
/>
`;

exports[`<Text /> render 1`] = `
<span
  className="ek-text"
/>
`;
